// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCvssScore cvssV2 should render v2 cvss 1`] = `<div />`;

exports[`parseCvssScore cvssV2 with labels should render correct tooltip content 1`] = `<div />`;

exports[`parseCvssScore cvssV2 with labels should render v2 cvss with label 1`] = `<div />`;

exports[`parseCvssScore cvssV3 1`] = `
<div>
  2.0
</div>
`;

exports[`parseCvssScore no cvss render 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      N/A
    </span>
  </div>
</div>
`;
